<resources>
    <string name="app_name">TakePhotoDemo</string>
    <string name="button_to_take_picture">button to take picture</string>
    <string name="validate">VALIDATE</string>
    <string name="cancel">CANCEL</string>
    <string name="please_select_a_room">Please Select a room</string>
    <string name="preview_of_the_camera_taken_photo">preview of the camera taken photo</string>
    <string name="select_a_room">Select a room :</string>
    <string name="take_photo">Take photo!</string>


</resources>